Thu Sep  5 17:25:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fstring, rb_str_free): use st_data_t instead of VALUE.

	* string.c (rb_fstring): get rid of duplicating already frozen object.

	* parse.y (str_suffix_gen): freeze in advance to reduce objects.

Thu Sep  5 14:01:22 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/optparse.rb:  The Integer acceptable now allows binary and
	  hexadecimal numbers per the documentation.  [ruby-trunk - Bug #8865]

	  DecimalInteger, OctalInteger, DecimalNumeric now validate their input
	  before converting to a number.  [ruby-trunk - Bug #8865]

	* test/optparse/test_acceptable.rb:  Tests for the above, tests for all
	  numeric acceptables for existing behavior.

Thu Sep  5 13:49:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* include/ruby/ruby.h: add RSTRING_FSTR flag

	* internal.h: add rb_fstring() prototype

	* parse.y (str_suffix_gen): deduplicate frozen string literals

	* string.c (rb_fstring): deduplicate frozen string literals

	* string.c (rb_str_free): delete fstrings from frozen_strings table when
	  they are GC'd

	* string.c (Init_String): initialize frozen_strings table

	* test/ruby/test_string.rb: test frozen strings are deduplicated

Thu Sep  5 12:48:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* configure.in (with_gmp): set with_gmp no if it is empty.

Thu Sep  5 10:41:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm_insnhelper.c (vm_getivar): use class sequence to check class
	  identity, instead of pointer + vm state

	* vm_insnhelper.c (vm_setivar): ditto

Thu Sep  5 08:20:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (GMP_DIV_DIGITS): New macro.
	  (bary_divmod_gmp): New function.
	  (rb_big_divrem_gmp): Ditto.
	  (bary_divmod_branch): Ditto.
	  (bary_divmod): Use bary_divmod_branch.
	  (bigdivrem): Ditto.

	* internal.h (rb_big_divrem_gmp): Declared.

Thu Sep  5 06:22:42 2013  Tanaka Akira  <akr@fsij.org>
